[package]
name = "termeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anathema = { git = "https://github.com/togglebyte/anathema.git", branch = "dev" }
clap = { version = "4.5.4", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
demand = "1.2.4"
directories = "5.0.1"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.117"
ureq = { version = "2.9.7", features = ["json", "native-tls"] }
